# Figma-Cost-Management-MCP

./: .gitignore  CLAUDE.local.md  CLAUDE.md  README.md
.claude/: CLAUDE.local.md  claude-style.md  settings.local.json
.claude/skills/: log-step.md  update-readme.md
implementations/python/: .env.example  pyproject.toml
implementations/python/src/figma_cost_mcp/: __main__.py  _mcp.py  config.py  http_client.py  local_auth_server.py  oauth.py  server.py
implementations/python/src/figma_cost_mcp/models/: activity_logs.py  comments.py  components.py  files.py  payments.py  projects.py  scim.py  teams.py  webhooks.py
implementations/python/src/figma_cost_mcp/tools/: activity_logs.py  analytics.py  auth.py  comments.py  components.py  dev_resources.py  files.py  me.py  payments.py  projects.py  scim.py  teams.py  variables.py  webhooks.py
implementations/python/tests/: conftest.py  test_activity_logs_tools.py  test_analytics_tools.py  test_auth_tools.py  test_comments_tools.py  test_components_tools.py  test_dev_resources_tools.py  test_files_tools.py  test_http_client.py  test_local_auth_server.py  test_me_tools.py  test_oauth.py  test_payments_tools.py  test_projects_tools.py  test_scim_tools.py  test_teams_tools.py  test_variables_tools.py  test_webhooks_tools.py
